style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.6rem;
}

body {
    /* background: rgb(18, 28, 255);
    background: linear-gradient(61deg, rgba(18, 28, 255, 0.8295693277310925) 10%, rgba(30, 38, 179, 0.7343312324929971) 40%, rgba(56, 179, 4, 0.8099614845938375) 100%) no-repeat; */
    background-color: #121CFF;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230b57ff'/%3E%3Cstop offset='1' stop-color='%230b57ff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23420bff'/%3E%3Cstop offset='1' stop-color='%23420bff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23050fff'/%3E%3Cstop offset='1' stop-color='%23050fff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23121CFF'/%3E%3Cstop offset='1' stop-color='%23121CFF' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230595FF'/%3E%3Cstop offset='1' stop-color='%230595FF' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%238005FF'/%3E%3Cstop offset='1' stop-color='%238005FF' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
    background-attachment: fixed;
    background-size: cover;
    /* background-color: #c4c1c1; */
    transition: 4;
}

.display-none {
    display: none !important;
    opacity: 100% !important;
}

header {
    width: 78%;
    background-color: #fff;
    margin: 0 auto;
    text-align: center;
    align-items: center;
}

header img {
    width: 350px;
}

.conteudo h1 {
    font-size: 2.2rem;
    padding: 1rem 0;

}

header h2 {
    padding-bottom: 1.3rem !important;
    font-size: 2.2rem;
}


.container {
    width: 78%;
    background-color: #fff;
    margin: 0 auto;
    min-height: 70vh;
    display: grid;
    grid-template-columns: .2fr 1fr;
    text-align: justify;

}

.menu {
    list-style: none;
    position: relative;

}

.container .topicos {
    margin: .3rem 0;
    padding: 1rem;

}


.container .conteudo {
    margin: .3rem 0;
    padding: 1rem 2.4rem;
    margin-left: 2%;
}

.btn {
    font-size: 1.2rem;
    text-decoration: none;
}

.conteudo h2 {
    font-size: 1.5rem;
    margin-bottom: 1rem;


}

.conteudo p {
    text-indent: 2rem;
    font-size: 1rem;
    margin-bottom: 1rem;
    letter-spacing: .7px;
    line-height: 1.6rem;
}

.conteudo img {
    max-width: 100%;
    height: 350px;

}

.menu li {
    margin: .2rem 0;
}

.menu li a {
    text-decoration: none;
    font-size: .8rem;
    width: 10rem;
    opacity: .8;
}

.menu li a:hover {
    background-color: #121CFF;
    color: white;
    opacity: 1;
    transition: .8s;
}

.active {
    background-color: #121CFF;
    color: white;
    transition: .6s;
    opacity: 1 !important;
}

.active:hover {
    background-color: #d3a262ce;
}

#membros {
    margin-top: 1rem;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem;
}

.card-membros {
    margin-top: 1rem;
    width: 190px;
}

.card-membros img {
    width: 100%;
    height: 200px;
    border-radius: .3rem;
}

.card-membros h3 {
    font-size: .8rem;
    text-align: center;
}

.card-membros h4 {
    text-align: center;
    font-size: .9rem;
}

.listStyle ol,
li {
    font-size: 1.2rem;
    line-height: 1.6rem;

}

.listStyle ol li {
    list-style: disc !important;
    margin-left: 10%;
    margin-bottom: .8rem;
}

.listStyle ul li {
    list-style: decimal;
    margin-left: 10%;
    margin-bottom: .8rem;
}

menu {
    display: none;
}

menu>ul {
    list-style-type: none;
}



menu>ul>li>a {
    display: block;
    text-decoration: none;
    padding: 4px;

    color: black;
    text-align: center;
    border: 2px solid gray;
}

span#burger {
    display: block;
    color: #121CFF;
    cursor: pointer;
}

span#burger:hover {
    background: white;
    color: black;
}

.container-analise {
    text-align: center;

}

.container-analise h2 {
    text-align: left;
}

.container-analise p {
    text-indent: 0;
    padding: .3rem 0;
    text-align: justify;
}

/*Loading*/
#fade-container {
    position: absolute;
    left: 0px;
    right: 0px;
    bottom: 0px;
    top: 0px;
    background: #fff;
    z-index: 10;
    width: 100%;
    min-height: 100vh;
    text-align: center;

}

#fade-container img {
    width: 20%;
    text-align: center;
    margin: 8rem auto 0 auto;
    align-items: center;
   
}
#fade-container p{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

@media screen and (max-width: 1000px) {
    body {
        background-image: none !important;
        background-color: #fff !important;
    }

    .container {
        display: block;
        width: 100%;
        margin: 0 !important;
    }

    header {
        width: 100%;
    }

    .menu li a {
        text-decoration: none;
        font-size: 1.1rem;
        width: 100%;
    }

    header img {
        width: 150px;
    }

    header h1 {
        padding: 0 0 1rem 0;
    }

    hr {
        background-color: black;
    }

    #membros {
        margin: 1rem auto;
        display: block;
    }

    .card-membros {
        margin: 1rem auto;
        text-align: center;

    }

    .conteudo {
        padding: 0 2rem !important;
    }

    .conteudo img {
        max-width: 100%;
        height: 200px;

    }



}


@media screen and (min-width: 1000px) {

    span#burger {
        display: none;
    }

    menu {
        display: block;
    }

    menu>ul>li {
        display: inline-block;
    }

    main {
        width: 768px;
    }


}

@media screen and (max-width: 520px) {
    #fade-container{
        width: 100%;
    }
    #fade-container img {
        width: 50%;
        margin-top: 30vh;
        
    }
    #fade-container p{
      font-size: 1rem;   
    }
}

